--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>PortfolioPerfect</title>
+    <title>Nabarun Mondal(Noga)'s WebPage </title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -65,7 +65,7 @@
 
                         <li class="page-scroll"><a href="#hero">Home</a></li>
                         <li class="page-scroll"><a href="#about">About</a></li>
-                        <li class="page-scroll"><a href="#service">Service</a></li>
+                        <li class="page-scroll"><a href="#service">Work</a></li>
                         <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="page-scroll"><a href="#contact">Contact</a></li>
                         
@@ -82,17 +82,17 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Alex Vidal</h1>
+                    <h1>Nabarun Mondal (Noga)</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Full Stack Developer</p>
-                        <a href="#contact" class="btn btn-fill ">Hire me</a>
+                        <p class="job-title">Engineer, Pistol Shooter, Author, Quoran</p>
+                        <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
                     </div>
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/alex-vidal.png" alt="alex-vidal">
+                    <img src="assets/img/noga.png" alt="nabarun-mondal" style="max-width: 50%; height: auto"/>
                 </div>
 
             </div>
@@ -107,7 +107,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Alex, a full stuck developer, a Ruby enthusiast, and a guy slighty obsessed for code quality. Also I'm a co-founder of pykod.com. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
+                        <p>Hey!! I'm Noga, an Engineer, a Programming Language enthusiast, and a guy obsessed with customer satisfaction. Also I'm a 10 M Air Pistiol Shooter.</p>
                         <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -274,16 +274,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="10" data-speed="2000">0</p>
+                        <p class="counter start" data-to="17" data-speed="2000">0</p>
                         <h4>Years Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="120" data-speed="2000">0</p>       
-                        <h4>Projects Delivered</h4>      
+                        <p class="counter start" data-to="6" data-speed="2000">0</p>       
+                        <h4>Companies</h4>      
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
-                        <h4>Seconds on this site!<br>What are you waiting for?</h4>
+                        <h4>Seconds on this site :-) </h4>
                     </div>
                 </div>
             </div>
@@ -306,7 +306,7 @@
                             <textarea name="message" id="mesaage" class="form-control" placeholder="Message" required></textarea>
                         </div>
                     </div>
-                    <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
+                    <button href="#" class="btn btn-border" type="submit"> Contact Me <span class="glyphicon glyphicon-send"></span></button>
                 </form>
             </div>
         </section><!-- /.section-form -->
