--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
+                    <a href="#hero" class="site-logo"><img src="assets/img/noga.png" alt="logo" style="max-width:60%;width: all;"></a>
 
                 </div><!-- /.navbar-header -->
 
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <h1>Nabarun Mondal (Noga)</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Engineer, Pistol Shooter, Author, Quoran</p>
+                        <p class="job-title">Engineer, Precision Shooter, Quoran</p>
                         <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/noga.png" alt="nabarun-mondal" style="max-width: 50%; height: auto"/>
+                    <img src="assets/img/books.jpg" alt="nabarun-mondal" style="max-width: 72%; height: auto"/>
                 </div>
 
             </div>
@@ -107,8 +107,8 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hey!! I'm Noga, an Engineer, a Programming Language enthusiast, and a guy obsessed with customer satisfaction. Also I'm a 10 M Air Pistiol Shooter.</p>
-                        <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <p>Hey!! I'm Noga, an Engineer, a Programming Language enthusiast, and a guy obsessed with customer satisfaction. Also I'm a 10 M Air Pistol Shooter.</p>
+                        <a href="assets/pdfs/cv.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
