about me section is reasonable now

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <h1>Nabarun Mondal (Noga)</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Engineer, Precision Shooter, Quoran</p>
+                        <p class="job-title">Engineer. Precision Shooter. Quoran. </p>
                         <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
@@ -107,7 +107,14 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hey!! I'm Noga, an Engineer, a Programming Language enthusiast, and a guy obsessed with customer satisfaction. Also I'm a 10 M Air Pistol Shooter.</p>
+                        <p>Hey!! I'm Noga, an Engineer. Currently Staff Engineer @ Compass.
+                         Worked with Microsoft, Amazon, LinkedIn &amp; D.E.Shaw & Co.
+                         Foundational issues in Computer Science interests me. 
+                         Created multiple programming languages for solving business problems.
+                         Love to solve business problems using technology for fun,
+                         customer satisfaction is an obsession for me.
+                         A 10 M Air Pistol Shooter - which is my passion.
+                        </p>
                         <a href="assets/pdfs/cv.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -123,43 +130,43 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Html/css</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                        <div class="skill">
-                            <h4>Python</h4>
+                            <h4>Product</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="75"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
-                    </div>
-                    <div class="col-md-4">
                         <div class="skill">
-                            <h4>Javascript</h4>
+                            <h4>Technology</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="82"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                        <div class="skill">
-                            <h4>Ruby</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="66"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Php</h4>
+                            <h4>Management</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="97"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Java</h4>
+                            <h4>Leadership</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
+                            </div><!-- /.progress -->
+                        </div><!-- /.skill -->
+                    </div>
+                    <div class="col-md-4">
+                        <div class="skill">
+                            <h4>Mentoring</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="99"></div><!-- /.progress-bar -->
+                            </div><!-- /.progress -->
+                        </div><!-- /.skill -->
+                        <div class="skill">
+                            <h4>Strategy</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
