--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/books.jpg" alt="nabarun-mondal" style="max-width: 72%; height: auto"/>
+                    <img src="assets/img/books.jpg" alt="nabarun-mondal" style="max-width:81%; height: auto"/>
                 </div>
 
             </div>
@@ -113,7 +113,7 @@
                          Created multiple programming languages for solving business problems.
                          Love to solve business problems using technology for fun,
                          customer satisfaction is an obsession for me.
-                         A 10 M Air Pistol Shooter - which is my passion.
+                         Passionate about 10M Air Pistol shooting.
                         </p>
                         <a href="assets/pdfs/cv.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
