--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/front-end.svg" alt="Front End Developer">
-                            <h4>Front-end</h4>
+                            <h4>Vision</h4>
                             <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
-                            <h4>Back-end</h4>
+                            <h4>Mission</h4>
                             <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/consultancy.svg" alt="Coding">
-                            <h4>Consultancy</h4>
+                            <h4>Delivery</h4>
                             <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
                         </div><!-- /.service -->
                     </div>
@@ -209,7 +209,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>My recent Works</h3>
+                    <h3>Assorted Works</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
