updating mission, vision, delivery

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hey!! I'm Noga, an Engineer. Currently Staff Engineer @ Compass.
+                        <p>Hey!! I'm Noga! Currently Staff Engineer @ Compass.
                          Worked with Microsoft, Amazon, LinkedIn &amp; D.E.Shaw & Co.
                          Foundational issues in Computer Science interests me. 
                          Created multiple programming languages for solving business problems.
@@ -185,21 +185,38 @@
                         <div class="service">
                             <img src="assets/img/front-end.svg" alt="Front End Developer">
                             <h4>Vision</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
+                            <p>
+                                As an industry veteran with decades of experience I understand what the business wants.
+                                I understand business priorities, and that they change all the time. 
+                                I am huge believer of the idea that customer satisfaction is the only key to business success.
+                                All my previous associates appreciates this.  
+                            </p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
                             <h4>Mission</h4>
-                            <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
+                            <p>
+                                Converting the vision into concrete technological goal is part of the fun. 
+                                It requires understanding customer mindset, product mentality, 
+                                and most crucially separating fact from fads. Marshalling the technology division 
+                                into shared goals is what makes the task challenging and worthwhile.
+                                My connections vouches me for it.
+                            </p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/consultancy.svg" alt="Coding">
                             <h4>Delivery</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
+                            <p>
+                                Delivery is what finally matters. Success is not about ideas, visions or goals, 
+                                it is all about delivery - producing outcome and impact that matters.
+                                I have proven track record of delivery irrespective on nearly every tech stack,
+                                be it CLR, JVM even on Mobile. 
+                                The only thing that matters in software is the experience of the user.
+                            </p>
                         </div><!-- /.service -->
                     </div>
                 </div>
