adding quora image and small changes

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
                         <li class="page-scroll"><a href="#hero">Home</a></li>
                         <li class="page-scroll"><a href="#about">About</a></li>
-                        <li class="page-scroll"><a href="#service">Work</a></li>
-                        <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
+                        <li class="page-scroll"><a href="#service">Approach</a></li>
+                        <li class="page-scroll"><a href="#portfolio">Ideas</a></li>
                         <li class="page-scroll"><a href="#contact">Contact</a></li>
                         
                     </ul><!-- /.navbar-nav -->
@@ -80,8 +80,7 @@
     <div id="hero" class="hero">
         <div class="container">
             <div class="row">
-
-                <div class="col-md-6">
+                <div class="col-md-6 col-md-offset-1">
                     <h1>Nabarun Mondal (Noga)</h1>
                     <div class="page-scroll">
                         <p class="job-title">Engineer. Precision Shooter. Quoran. </p>
@@ -91,8 +90,12 @@
                     </div>
                 </div>
             
+                 <div class="col-md-6 col-md-offset-1">
+                    <img src="assets/img/quora.png" alt="nabarun-mondal-quora" style="max-width:81%; height: auto"/>
+                </div>
+
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/books.jpg" alt="nabarun-mondal" style="max-width:81%; height: auto"/>
+                    <img src="assets/img/books.jpg" alt="nabarun-mondal-library" style="max-width:81%; height: auto"/>
                 </div>
 
             </div>
