updated with latest

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 Delivery is what finally matters. Success is not about ideas, visions or goals, 
                                 it is all about delivery - producing outcome and impact that matters.
                                 I have proven track record of delivery irrespective on nearly every tech stack,
-                                be it CLR, JVM even on Mobile. 
+                                be it CLR, JVM and on Mobile. 
                                 The only thing that matters in software is the experience of the user.
                             </p>
                         </div><!-- /.service -->
@@ -237,7 +237,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Delivering Software in 2020</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -247,7 +247,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Business First Technology</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -257,12 +257,14 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>DSL For Business Automation</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
+                     <!-- 
+                    START COMMENT 
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
@@ -270,8 +272,8 @@
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
@@ -280,8 +282,8 @@
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
@@ -290,9 +292,11 @@
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
+                    END COMMENT 
+                    -->
                 </div>
             </div>
         </section><!-- /.secton-portfolio -->
