--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                          customer satisfaction is an obsession for me.
                          Passionate about 10M Air Pistol shooting.
                         </p>
-                        <a href="assets/pdfs/cv.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <a href="assets/pdfs/cv.pdf" class="btn btn-fill" target="_blank" download>my cv</a>
                     </div>
                 </div>
             </div>
@@ -229,7 +229,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>Assorted Writings</h3>
+                    <h3>Assorted Musings</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
@@ -249,7 +249,7 @@
                             <div class="portfolio-item-info">
                                 <h4>Business First Technology</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="https://www.linkedin.com/in/nabarunmondal/detail/recent-activity/posts" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -259,7 +259,7 @@
                             <div class="portfolio-item-info">
                                 <h4>DSL For Business Automation</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="assets/pdfs/zoomba.pdf" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -306,11 +306,11 @@
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter start" data-to="17" data-speed="2000">0</p>
-                        <h4>Years Of Experience</h4>
+                        <h4>Years Of Technology Delivery</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter start" data-to="6" data-speed="2000">0</p>       
-                        <h4>Companies</h4>      
+                        <h4>Top Tech Companies</h4>      
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
@@ -393,11 +393,21 @@
             <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">Business First Technology</h4>
+            <p>
+              Does business need software? No and Yes. 
+              Clearly how brilliantly the code was written does not matter when one owns a business portal. 
+              Software augments business, there is no point making software "the business". 
+              Do not get it wrong. There are handful of highly technology firms doing software "as business", 
+              and it is a very high niche game. But in reality, 
+              most of the businesses are not about software, 
+              it is about taking user pain away, and alway - making end users happy.
+              Marketing brings you the customers, Tech-folks retain them, 
+              more happy customers gets their references. It is a happy cycle.
+           </p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="https://www.linkedin.com/in/nabarunmondal/detail/recent-activity/posts/" target="_blank" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
@@ -411,11 +421,19 @@
             <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">DSL For Business Automation</h4>
+            <p>
+               Industry is filled up with people who *only* deals in abstract ideas.
+               Engineers do not deal with them. Business first technology requires clarity of thought and clarity of expression, 
+               expressed in writing showcasing business usage. 
+               Hence, I have created my own programming language to expedite business needs.
+               Here is the whole manual - which is beyond just a manual - it is a testimony of how business first thinking 
+               must be imposed with delivery in mind. 
+               We call it <a href="https://gitlab.com/non.est.sacra/zoomba/-/wikis/home" target="_blank">ZoomBA</a> - for [Zoo]ming Fast [B]usiness [A]utomation.
+            </p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="assets/pdfs/zoomba.pdf" target="_blank" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
