fixing mobile issue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Nabarun Mondal(Noga)'s WebPage </title>
+    <title>Nabarun Mondal(Noga)'s Home </title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -80,22 +80,22 @@
     <div id="hero" class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-1">
-                    <h1>Nabarun Mondal (Noga)</h1>
+                <div class="col-md-6 col-md-offset-1" style="z-index: 2;">
+                    <h1>Nabarun Mondal</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Engineer. Precision Shooter. Quoran. </p>
+                        <p class="job-title">Engineer. Shooter. Quoran.</p>
                         <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
                     </div>
                 </div>
             
-                 <div class="col-md-6 col-md-offset-1">
+                 <div class="col-md-6 col-md-offset-1" style="z-index: 1;">
                     <img src="assets/img/quora.png" alt="nabarun-mondal-quora" style="max-width:81%; height: auto"/>
                 </div>
 
-                <div class="col-md-6 text-right">
-                    <img src="assets/img/books.jpg" alt="nabarun-mondal-library" style="max-width:81%; height: auto"/>
+                <div class="col-md-6 text-right" style="z-index: 0;">
+                    <img src="assets/img/books.jpg" alt="nabarun-mondal-library" style="max-width:76%; height: auto"/>
                 </div>
 
             </div>
